100xdeveloper.rust_seatmaster.dede066cf734ecee5205bfdcae0f94393de879e7
    Updating `tuna` index
 Downloading crates ...
  Downloaded arcstr v1.2.0 (registry `tuna`)
  Downloaded crc v3.4.0 (registry `tuna`)
  Downloaded whoami v1.6.1 (registry `tuna`)
  Downloaded signal-hook-registry v1.4.7 (registry `tuna`)
  Downloaded uuid v1.19.0 (registry `tuna`)
  Downloaded rsa v0.9.9 (registry `tuna`)
  Downloaded redis v1.0.1 (registry `tuna`)
  Downloaded hyper-util v0.1.19 (registry `tuna`)
  Downloaded axum v0.8.7 (registry `tuna`)
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling libc v0.2.178
   Compiling serde v1.0.228
   Compiling serde_core v1.0.228
    Checking cfg-if v1.0.4
   Compiling typenum v1.19.0
   Compiling version_check v0.9.5
   Compiling parking_lot_core v0.9.12
   Compiling icu_properties_data v2.1.2
   Compiling icu_normalizer_data v2.1.1
   Compiling stable_deref_trait v1.2.1
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
    Checking pin-project-lite v0.2.16
   Compiling generic-array v0.14.7
   Compiling cc v1.2.49
   Compiling pkg-config v0.3.32
   Compiling vcpkg v0.2.15
   Compiling crossbeam-utils v0.8.21
    Checking bytes v1.11.0
   Compiling autocfg v1.5.0
   Compiling syn v2.0.111
    Checking futures-core v0.3.31
    Checking scopeguard v1.2.0
    Checking lock_api v0.4.14
   Compiling zerocopy v0.8.31
    Checking itoa v1.0.15
    Checking socket2 v0.6.1
    Checking mio v1.1.1
    Checking signal-hook-registry v1.4.7
    Checking once_cell v1.21.3
   Compiling openssl-sys v0.9.111
   Compiling openssl v0.10.75
   Compiling litemap v0.8.1
    Checking futures-sink v0.3.31
   Compiling writeable v0.6.2
   Compiling serde_json v1.0.145
    Checking log v0.4.29
   Compiling thiserror v2.0.17
   Compiling subtle v2.6.1
   Compiling native-tls v0.2.14
    Checking tracing-core v0.1.35
    Checking pin-utils v0.1.0
    Checking memchr v2.7.6
   Compiling num-traits v0.2.19
   Compiling foreign-types-shared v0.1.1
    Checking percent-encoding v2.3.2
   Compiling equivalent v1.0.2
    Checking form_urlencoded v1.2.2
   Compiling foreign-types v0.3.2
   Compiling getrandom v0.2.16
    Checking slab v0.4.11
    Checking ryu v1.0.20
   Compiling utf8_iter v1.0.4
   Compiling allocator-api2 v0.2.21
    Checking futures-io v0.3.31
    Checking futures-task v0.3.31
   Compiling tinyvec_macros v0.1.1
   Compiling bitflags v2.10.0
   Compiling foldhash v0.1.5
   Compiling hashbrown v0.15.5
   Compiling tinyvec v1.10.0
    Checking futures-util v0.3.31
   Compiling tokio v1.48.0
   Compiling ppv-lite86 v0.2.21
   Compiling rand_core v0.6.4
   Compiling concurrent-queue v2.5.0
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
    Checking http v1.4.0
   Compiling digest v0.10.7
   Compiling parking v2.2.1
   Compiling cpufeatures v0.2.17
   Compiling openssl-probe v0.1.6
   Compiling crc-catalog v2.4.0
   Compiling getrandom v0.3.4
   Compiling hashbrown v0.16.1
   Compiling crc v3.4.0
    Checking http-body v1.0.1
   Compiling sha2 v0.10.9
   Compiling event-listener v5.4.1
   Compiling hmac v0.12.1
   Compiling rand_chacha v0.3.1
   Compiling hashlink v0.10.0
   Compiling indexmap v2.12.1
   Compiling unicode-normalization v0.1.25
   Compiling synstructure v0.13.2
   Compiling crossbeam-queue v0.3.12
    Checking futures-channel v0.3.31
   Compiling unicode-bidi v0.3.18
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling tracing-attributes v0.1.31
   Compiling zerofrom v0.1.6
   Compiling yoke v0.8.1
   Compiling tokio-macros v2.6.0
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling openssl-macros v0.1.1
   Compiling thiserror-impl v2.0.17
    Checking tracing v0.1.43
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
   Compiling tokio-stream v0.1.17
    Checking icu_locale_core v2.1.1
   Compiling icu_collections v2.1.1
   Compiling base64 v0.22.1
   Compiling unicode-properties v0.1.4
   Compiling httparse v1.10.1
    Checking icu_provider v2.1.1
   Compiling uuid v1.19.0
    Checking icu_properties v2.1.2
   Compiling stringprep v0.1.5
    Checking smallvec v1.15.1
   Compiling either v1.15.0
    Checking parking_lot v0.12.5
   Compiling icu_normalizer v2.1.1
    Checking idna_adapter v1.2.1
   Compiling futures-intrusive v0.5.0
   Compiling atoi v2.0.0
    Checking idna v1.1.0
   Compiling rand v0.8.5
   Compiling hkdf v0.12.4
    Checking url v2.5.7
   Compiling md-5 v0.10.6
   Compiling dotenvy v0.15.7
   Compiling byteorder v1.5.0
    Checking tower-service v0.3.3
   Compiling whoami v1.6.1
   Compiling home v0.5.12
   Compiling hex v0.4.3
   Compiling sqlx-core v0.8.6
    Checking sync_wrapper v1.0.2
   Compiling heck v0.5.0
    Checking tower-layer v0.3.3
    Checking atomic-waker v1.1.2
    Checking httpdate v1.0.3
    Checking http-body-util v0.1.3
    Checking num-integer v0.1.46
    Checking lazy_static v1.5.0
    Checking mime v0.3.17
    Checking num-bigint v0.4.6
    Checking sharded-slab v0.1.7
    Checking serde_urlencoded v0.7.1
    Checking axum-core v0.5.5
    Checking serde_path_to_error v0.1.20
    Checking tracing-log v0.2.0
    Checking thread_local v1.1.9
    Checking xxhash-rust v0.8.15
    Checking matchit v0.8.4
    Checking sha1_smol v1.0.1
    Checking nu-ansi-term v0.50.3
    Checking arcstr v1.2.0
    Checking tracing-subscriber v0.3.22
    Checking hyper v1.8.1
    Checking tokio-util v0.7.17
    Checking tower v0.5.2
    Checking combine v4.6.7
   Compiling sqlx-postgres v0.8.6
    Checking hyper-util v0.1.19
    Checking axum v0.8.7
   Compiling sqlx-macros-core v0.8.6
   Compiling sqlx-macros v0.8.6
    Checking sqlx v0.8.6
error: /tmp/100xdeveloper_rust_seatmaster_jbsq43o7/target/debug/deps/libsqlx_macros-c8c348c527ae3cc7.so: libssl.so.3: cannot open shared object file: No such file or directory
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/sqlx-0.8.6/src/lib.rs:72:1
   |
72 | pub extern crate sqlx_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved imports `self::encode::Encode`, `self::decode::Decode`, `super::Decode`, `super::Encode`, `super::FromRow`, `super::Type`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/sqlx-0.8.6/src/lib.rs:141:9
    |
141 | pub use self::encode::Encode;
    |         ^^^^^^^^^^^^^^^^^^^^
...
152 | pub use self::decode::Decode;
    |         ^^^^^^^^^^^^^^^^^^^^
...
166 |     pub use super::Decode;
    |             ^^^^^^^^^^^^^
167 |     pub use super::Encode;
    |             ^^^^^^^^^^^^^
168 |     pub use super::Executor;
169 |     pub use super::FromRow;
    |             ^^^^^^^^^^^^^^
...
173 |     pub use super::Type;
    |             ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `sqlx` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
